...
                    text = LocalContext.current.getString(job.locationResourceId),
                    //modifier = Modifier.padding(16.dp),
                    style = MaterialTheme.typography.bodyMedium
                )
                Spacer(Modifier.weight(1f))
                if (submitted) {
                    Text("Submitted")
                }else if(!expanded) {
                    ApplyButton(
                        onClick = { expand(index) },
                        index = index,
                        modifier = Modifier
                    )
...
    Scaffold (
        floatingActionButton = {
            Button(
                onClick = { submit() },
                modifier = Modifier.padding(8.dp)
            ) {
                Text("Submit")
            }
        }
    ) { it ->
        LazyColumn (contentPadding = it) {
            itemsIndexed(questions){ index, question ->
                Text("$question: ${answers[index]}")
...
