...
        <item>Desired Salary</item>
    </string-array>
    <string-array name="amazon_questions">
        <item>University</item>
    </string-array>
    <string-array name="spotify_questions">
        <item>First Name</item>
        <item>Last Name</item>
        <item>Do you have pets?</item>
    </string-array>
    <string-array name="ibm_questions">
        <item>Name</item>
    </string-array>
...
